1. Collection API Улучшения[#104386]